@@ -7,6 +7,9 @@
     2. /var/cache/edb/world is now /var/lib/portage/world.
     3. /etc/portage/profile/virtuals is _USER_ configs only.
 
+  25 Apr 2005; Mike Frysinger <vapier@gentoo.org> bin/ebuild-functions.sh:
+  Remove autoconfig FEATURE and make it always run Bug #81822.
+
   25 Apr 2005; Marius Mauch <genone@gentoo.org> pym/portage.py:
   remove the stupid "masked by -* keyword" message.
 
